crates/core/tests/snapshots/container_type_test__partial_type_default__falls_back_to_first_variant.snap
---
source: crates/core/tests/container_type_test.rs
expression: pretty(container.impl_partial_type_default())
---
#[automatically_derived]
impl Default for PartialExample {
    fn default() -> Self {
        Self::A(Default::default())
    }
}
