crates/core/tests/snapshots/container_type_test__partial_type_default__uses_marked_variant.snap
---
source: crates/core/tests/container_type_test.rs
expression: pretty(container.impl_partial_type_default())
---
#[automatically_derived]
impl Default for PartialExample {
    fn default() -> Self {
        Self::B(Default::default(), Default::default())
    }
}
